# relationship-correlation

./: README.md  config.yaml  mutual_information.py  plotter.py  pyproject.toml  runner.py  sample_track_data.csv
datasets/: sample_dataset.csv
models/: __init__.py
models/maximal_information_coefficient/: __init__.py  characteristic_matrix.py  grid_search.py  maximal_information_coefficient.py  normalization.py  validation.py
models/mutual_information/: __init__.py  calculator.py  discretization.py  encoding.py  information_theory.py  missing_values.py  type_inference.py
mutual_information.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/models/maximal_information_coefficient/: test_against_reference.py  test_maximal_information_coefficient.py
tests/models/mutual_information/: test_against_sklearn.py  test_mutual_information.py
utils/: __init__.py  discretization.py  encoding.py  information_theory.py  missing_values.py  mutual_information_utils.py  type_inference.py
