[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mutual-information"
version = "0.1.0"
description = "Compute mutual information between all variables in a dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.23.5,<3",
    "pandas>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools]
py-modules = ["mutual_information"]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils"]
